--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.5.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.1.3",
     "axios": "^0.19.0",
+    "graphql": "^15.3.0",
+    "nodemailer": "^6.4.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.0.1",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
+    "start*": "ntl dev",
     "start": "react-scripts start",
     "start:lambda": "netlify-lambda serve src/lambda",
     "build": "run-p build:**",
