--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.1.3",
+    "antd": "^4.6.1",
     "axios": "^0.19.0",
     "graphql": "^15.3.0",
     "nodemailer": "^6.4.11",
