--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.5.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.1.3",
-    "antd": "^4.6.1",
+    "apollo-boost": "^0.4.9",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-upload-client": "^14.1.1",
     "axios": "^0.19.0",
+    "bootstrap": "^4.5.2",
     "graphql": "^15.3.0",
     "nodemailer": "^6.4.11",
     "react": "^16.8.6",
+    "react-apollo": "^3.1.5",
+    "react-audio-player": "^0.13.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.8.6",
+    "react-file-uploader": "^1.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.0.1",
     "styled-components": "^5.1.1"
