--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,27 @@
 {
   "short_name": "ICA 🎵",
   "name": "Incra Music 🎵",
+  "description": "Free Music WebSite!",
   "icons": [
     {
       "src": "./Img/favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "./Img/favicon2.png",
+      "sizes": "180x180",
+      "type": "image/png"
+    },
+    {
+      "src": "img/AppImgMain.png",
+      "sizes": "192x192",
+      "type": "image/png"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "orientation": "portrait",
+  "background_color": "#ffffff",
+  "theme_color": "#301c4d"
 }
