--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "apollo-upload-client": "^14.1.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.5.2",
+    "fast-xml-parser": "^3.17.4",
     "graphql": "^15.3.0",
     "nodemailer": "^6.4.11",
+    "oauth-signature": "^1.5.0",
     "react": "^16.8.6",
     "react-apollo": "^3.1.5",
     "react-audio-player": "^0.13.0",
