--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "react-audio-player": "^0.13.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.8.6",
-    "react-file-uploader": "^1.0.0",
+    "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.0.1",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "ytdl": "^1.3.5"
   },
   "scripts": {
     "start*": "ntl dev",
