--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.5.2",
     "fast-xml-parser": "^3.17.4",
+    "ffmpeg": "0.0.4",
     "graphql": "^15.3.0",
     "nodemailer": "^6.4.11",
     "oauth-signature": "^1.5.0",
@@ -22,7 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.0.1",
     "styled-components": "^5.1.1",
-    "ytdl": "^1.3.5"
+    "youtube-mp3-downloader": "^0.7.3"
   },
   "scripts": {
     "start*": "ntl dev",
