--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.0.1",
-    "styled-components": "^5.1.1",
-    "youtube-mp3-downloader": "^0.7.3"
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start*": "ntl dev",
