--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.5.2",
     "fast-xml-parser": "^3.17.4",
-    "ffmpeg": "0.0.4",
     "graphql": "^15.3.0",
+    "lamejs": "^1.2.0",
     "nodemailer": "^6.4.11",
     "oauth-signature": "^1.5.0",
     "react": "^16.8.6",
