--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-upload-client": "^14.1.1",
+    "audiobuffer-to-wav": "^1.0.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.5.2",
     "fast-xml-parser": "^3.17.4",
@@ -22,7 +23,8 @@
     "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.0.1",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "xhr": "^2.5.0"
   },
   "scripts": {
     "start*": "ntl dev",
